--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     position: absolute;
     width: 50%;
     height: 100%;
-    background-color: gold;
+    background-color: goldenrod;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
@@ -140,6 +140,9 @@ img{
 }
 .hidden{
     display: none;
+}
+.currentPlayer{
+	background-color: gold;
 }
 
 
